Added process module.

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "underscore": "~1.5.1",
     "async": "~0.2.9",
-    "jquery-browserify": "~1.8.1"
+    "jquery-browserify": "~1.8.1",
+    "process": "~0.5.1"
   },
   "devDependencies": {
     "grunt-browserify": "~1.2.2"
